codigo_filtros_creado

--- a/bases_datos/limpieza_logs.ipynb
+++ b/bases_datos/limpieza_logs.ipynb
@@ -12,24 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_file_path = r\"C:\\Users\\DELL\\Desktop\\losg_proyect\\bases_datos\\log_4_test.csv\"\n",
-    "output_file_path = r\"C:\\Users\\DELL\\Desktop\\losg_proyect\\bases_datos\\log_4_test_output.csv\""
+    "input_file_path = r\"C:\\Users\\DELL\\Desktop\\logs\\bases_datos\\log_4_test.csv\"\n",
+    "output_file_path = r\"C:\\Users\\DELL\\Desktop\\logs\\bases_datos\\log_4_test_output.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Proceso completado. Archivo de salida: C:\\Users\\DELL\\Desktop\\losg_proyect\\bases_datos\\log_4_test_output.csv\n"
+      "Proceso completado. Archivo de salida: C:\\Users\\DELL\\Desktop\\logs\\bases_datos\\log_4_test_output.csv\n"
      ]
     }
    ],
