--- a/analisis_exploratorio/analisis_exploratorio.ipynb
+++ b/analisis_exploratorio/analisis_exploratorio.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importación de librerias.\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -14,17 +15,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_log_limpio = r\"C:\\Users\\DELL\\Desktop\\losg_proyect\\bases_datos\\log_limpio.csv\"\n",
+    "# Path de datos y su lectura\n",
+    "path_log_limpio = r\"C:\\Users\\DELL\\Desktop\\logs\\bases_datos\\log_4_test_output.csv\"\n",
     "log_data = pd.read_csv(path_log_limpio)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9134 entries, 0 to 9133\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   fecha           9134 non-null   object\n",
+      " 1   hora            9134 non-null   object\n",
+      " 2   codigo_defecto  9134 non-null   object\n",
+      " 3   alerta          9134 non-null   object\n",
+      " 4   especificacion  9134 non-null   object\n",
+      "dtypes: object(5)\n",
+      "memory usage: 356.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#informacion de los datos\n",
+    "log_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -60,80 +91,245 @@
        "      <th>0</th>\n",
        "      <td>22/08/2005</td>\n",
        "      <td>04:13:10</td>\n",
-       "      <td>[0930]</td>\n",
-       "      <td>&lt;NORMAL&gt;</td>\n",
+       "      <td>0930</td>\n",
+       "      <td>NORMAL</td>\n",
        "      <td>One Board is completed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>22/08/2005</td>\n",
        "      <td>04:13:10</td>\n",
-       "      <td>[0930]</td>\n",
-       "      <td>&lt;NORMAL&gt;</td>\n",
+       "      <td>0930</td>\n",
+       "      <td>NORMAL</td>\n",
        "      <td>One Board is completed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>22/08/2005</td>\n",
        "      <td>04:13:11</td>\n",
-       "      <td>[0930]</td>\n",
-       "      <td>&lt;NORMAL&gt;</td>\n",
+       "      <td>0930</td>\n",
+       "      <td>NORMAL</td>\n",
        "      <td>One Board is completed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>22/08/2005</td>\n",
        "      <td>04:13:11</td>\n",
-       "      <td>[0938]</td>\n",
-       "      <td>&lt;NORMAL&gt;</td>\n",
+       "      <td>0938</td>\n",
+       "      <td>NORMAL</td>\n",
        "      <td>Reserved Information Message 7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>22/08/2005</td>\n",
        "      <td>04:13:11</td>\n",
-       "      <td>[0930]</td>\n",
-       "      <td>&lt;NORMAL&gt;</td>\n",
+       "      <td>0930</td>\n",
+       "      <td>NORMAL</td>\n",
        "      <td>One Board is completed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>22/08/2005</td>\n",
-       "      <td>04:13:11</td>\n",
-       "      <td>[0930]</td>\n",
-       "      <td>&lt;NORMAL&gt;</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9129</th>\n",
+       "      <td>22/08/2007</td>\n",
+       "      <td>08:53:31</td>\n",
+       "      <td>0930</td>\n",
+       "      <td>NORMAL</td>\n",
        "      <td>One Board is completed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>22/08/2005</td>\n",
-       "      <td>04:13:13</td>\n",
-       "      <td>[0930]</td>\n",
-       "      <td>&lt;NORMAL&gt;</td>\n",
-       "      <td>One Board is completed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>22/08/2005</td>\n",
-       "      <td>04:13:14</td>\n",
-       "      <td>[0938]</td>\n",
-       "      <td>&lt;NORMAL&gt;</td>\n",
+       "      <th>9130</th>\n",
+       "      <td>22/08/2007</td>\n",
+       "      <td>08:53:33</td>\n",
+       "      <td>0938</td>\n",
+       "      <td>NORMAL</td>\n",
        "      <td>Reserved Information Message 7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>22/08/2005</td>\n",
-       "      <td>04:13:45</td>\n",
-       "      <td>[0930]</td>\n",
-       "      <td>&lt;NORMAL&gt;</td>\n",
+       "      <th>9131</th>\n",
+       "      <td>22/08/2007</td>\n",
+       "      <td>08:53:38</td>\n",
+       "      <td>0930</td>\n",
+       "      <td>NORMAL</td>\n",
        "      <td>One Board is completed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>22/08/2005</td>\n",
-       "      <td>04:13:45</td>\n",
-       "      <td>[0930]</td>\n",
-       "      <td>&lt;NORMAL&gt;</td>\n",
+       "      <th>9132</th>\n",
+       "      <td>22/08/2007</td>\n",
+       "      <td>08:53:38</td>\n",
+       "      <td>0930</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>One Board is completed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9133</th>\n",
+       "      <td>22/08/2007</td>\n",
+       "      <td>08:53:40</td>\n",
+       "      <td>0938</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>Reserved Information Message 7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9134 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           fecha      hora codigo_defecto  alerta  \\\n",
+       "0     22/08/2005  04:13:10           0930  NORMAL   \n",
+       "1     22/08/2005  04:13:10           0930  NORMAL   \n",
+       "2     22/08/2005  04:13:11           0930  NORMAL   \n",
+       "3     22/08/2005  04:13:11           0938  NORMAL   \n",
+       "4     22/08/2005  04:13:11           0930  NORMAL   \n",
+       "...          ...       ...            ...     ...   \n",
+       "9129  22/08/2007  08:53:31           0930  NORMAL   \n",
+       "9130  22/08/2007  08:53:33           0938  NORMAL   \n",
+       "9131  22/08/2007  08:53:38           0930  NORMAL   \n",
+       "9132  22/08/2007  08:53:38           0930  NORMAL   \n",
+       "9133  22/08/2007  08:53:40           0938  NORMAL   \n",
+       "\n",
+       "                      especificacion  \n",
+       "0             One Board is completed  \n",
+       "1             One Board is completed  \n",
+       "2             One Board is completed  \n",
+       "3     Reserved Information Message 7  \n",
+       "4             One Board is completed  \n",
+       "...                              ...  \n",
+       "9129          One Board is completed  \n",
+       "9130  Reserved Information Message 7  \n",
+       "9131          One Board is completed  \n",
+       "9132          One Board is completed  \n",
+       "9133  Reserved Information Message 7  \n",
+       "\n",
+       "[9134 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#interfaz de tabla dinamica (hacer clic en \"open\"\"log_data\")\n",
+    "log_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#copia de seguridad\n",
+    "data = log_data.copy(deep= True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploración cuantitativa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Basado en la iformacion veamos cuantos registros tenemos de:\n",
+    "- Tablillas por año.\n",
+    "- Cuantos diferentes codigos tenemos.\n",
+    "- Cuantas alertas tenemos de cada tipo.\n",
+    "- Cuentas difeterentes especificaciones tenemos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['fecha'] = pd.to_datetime(data['fecha'], format='%d/%m/%Y')\n",
+    "data['hora'] = pd.to_timedelta(data['hora'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fecha</th>\n",
+       "      <th>hora</th>\n",
+       "      <th>codigo_defecto</th>\n",
+       "      <th>alerta</th>\n",
+       "      <th>especificacion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2005-08-22</td>\n",
+       "      <td>0 days 04:13:10</td>\n",
+       "      <td>0930</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>One Board is completed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2005-08-22</td>\n",
+       "      <td>0 days 04:13:10</td>\n",
+       "      <td>0930</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>One Board is completed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2005-08-22</td>\n",
+       "      <td>0 days 04:13:11</td>\n",
+       "      <td>0930</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>One Board is completed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2005-08-22</td>\n",
+       "      <td>0 days 04:13:11</td>\n",
+       "      <td>0938</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>Reserved Information Message 7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2005-08-22</td>\n",
+       "      <td>0 days 04:13:11</td>\n",
+       "      <td>0930</td>\n",
+       "      <td>NORMAL</td>\n",
        "      <td>One Board is completed</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -141,69 +337,167 @@
        "</div>"
       ],
       "text/plain": [
-       "        fecha      hora codigo_defecto    alerta  \\\n",
-       "0  22/08/2005  04:13:10         [0930]  <NORMAL>   \n",
-       "1  22/08/2005  04:13:10         [0930]  <NORMAL>   \n",
-       "2  22/08/2005  04:13:11         [0930]  <NORMAL>   \n",
-       "3  22/08/2005  04:13:11         [0938]  <NORMAL>   \n",
-       "4  22/08/2005  04:13:11         [0930]  <NORMAL>   \n",
-       "5  22/08/2005  04:13:11         [0930]  <NORMAL>   \n",
-       "6  22/08/2005  04:13:13         [0930]  <NORMAL>   \n",
-       "7  22/08/2005  04:13:14         [0938]  <NORMAL>   \n",
-       "8  22/08/2005  04:13:45         [0930]  <NORMAL>   \n",
-       "9  22/08/2005  04:13:45         [0930]  <NORMAL>   \n",
+       "       fecha            hora codigo_defecto  alerta  \\\n",
+       "0 2005-08-22 0 days 04:13:10           0930  NORMAL   \n",
+       "1 2005-08-22 0 days 04:13:10           0930  NORMAL   \n",
+       "2 2005-08-22 0 days 04:13:11           0930  NORMAL   \n",
+       "3 2005-08-22 0 days 04:13:11           0938  NORMAL   \n",
+       "4 2005-08-22 0 days 04:13:11           0930  NORMAL   \n",
        "\n",
        "                   especificacion  \n",
        "0          One Board is completed  \n",
        "1          One Board is completed  \n",
        "2          One Board is completed  \n",
        "3  Reserved Information Message 7  \n",
-       "4          One Board is completed  \n",
-       "5          One Board is completed  \n",
-       "6          One Board is completed  \n",
-       "7  Reserved Information Message 7  \n",
-       "8          One Board is completed  \n",
-       "9          One Board is completed  "
+       "4          One Board is completed  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "log_data.head(10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Exploracion: Tipo de Datos"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Exploración cuantitativa"
+    "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fecha</th>\n",
+       "      <th>hora</th>\n",
+       "      <th>codigo_defecto</th>\n",
+       "      <th>alerta</th>\n",
+       "      <th>especificacion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>2005-08-22</td>\n",
+       "      <td>0 days 05:04:17</td>\n",
+       "      <td>5633</td>\n",
+       "      <td>WARNING</td>\n",
+       "      <td>Head14 pick up the edge of Part 34-14626-of Fe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>2005-08-22</td>\n",
+       "      <td>0 days 05:04:17</td>\n",
+       "      <td>5633</td>\n",
+       "      <td>WARNING</td>\n",
+       "      <td>Head13 pick up the edge of Part 34-14626-of Fe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>2005-08-22</td>\n",
+       "      <td>0 days 05:04:17</td>\n",
+       "      <td>5633</td>\n",
+       "      <td>WARNING</td>\n",
+       "      <td>Head15 pick up the edge of Part 34-14626-of Fe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>2005-08-22</td>\n",
+       "      <td>0 days 05:04:18</td>\n",
+       "      <td>5101</td>\n",
+       "      <td>WARNING</td>\n",
+       "      <td>Head12 Feeder R15 Part 34-14626-The retry coun...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>2005-08-22</td>\n",
+       "      <td>0 days 05:04:18</td>\n",
+       "      <td>5101</td>\n",
+       "      <td>WARNING</td>\n",
+       "      <td>Head14 Feeder R15 Part 34-14626-The retry coun...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>2005-08-22</td>\n",
+       "      <td>0 days 05:04:18</td>\n",
+       "      <td>5101</td>\n",
+       "      <td>WARNING</td>\n",
+       "      <td>Head11 Feeder R15 Part 34-14626-The retry coun...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>2005-08-22</td>\n",
+       "      <td>0 days 05:04:18</td>\n",
+       "      <td>5101</td>\n",
+       "      <td>WARNING</td>\n",
+       "      <td>Head13 Feeder R15 Part 34-14626-The retry coun...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>2005-08-22</td>\n",
+       "      <td>0 days 05:04:18</td>\n",
+       "      <td>5101</td>\n",
+       "      <td>WARNING</td>\n",
+       "      <td>Head15 Feeder R15 Part 34-14626-The retry coun...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         fecha            hora codigo_defecto   alerta  \\\n",
+       "96  2005-08-22 0 days 05:04:17           5633  WARNING   \n",
+       "97  2005-08-22 0 days 05:04:17           5633  WARNING   \n",
+       "98  2005-08-22 0 days 05:04:17           5633  WARNING   \n",
+       "99  2005-08-22 0 days 05:04:18           5101  WARNING   \n",
+       "100 2005-08-22 0 days 05:04:18           5101  WARNING   \n",
+       "101 2005-08-22 0 days 05:04:18           5101  WARNING   \n",
+       "102 2005-08-22 0 days 05:04:18           5101  WARNING   \n",
+       "103 2005-08-22 0 days 05:04:18           5101  WARNING   \n",
+       "\n",
+       "                                        especificacion  \n",
+       "96   Head14 pick up the edge of Part 34-14626-of Fe...  \n",
+       "97   Head13 pick up the edge of Part 34-14626-of Fe...  \n",
+       "98   Head15 pick up the edge of Part 34-14626-of Fe...  \n",
+       "99   Head12 Feeder R15 Part 34-14626-The retry coun...  \n",
+       "100  Head14 Feeder R15 Part 34-14626-The retry coun...  \n",
+       "101  Head11 Feeder R15 Part 34-14626-The retry coun...  \n",
+       "102  Head13 Feeder R15 Part 34-14626-The retry coun...  \n",
+       "103  Head15 Feeder R15 Part 34-14626-The retry coun...  "
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "git remote add origin <git@github.com:Brayam1998/logs_dataSciencie.git>\n",
-    "biehub98"
+    "data_filtrada = data[\n",
+    "    (data['fecha'] >= pd.to_datetime('2005-08-22')) &\n",
+    "      (data['fecha'] <=pd.to_datetime('2006-09-15')) &\n",
+    "      #(data[\"codigo_defecto\"]== \"0938\") &\n",
+    "      (data[\"alerta\"] == \"WARNING\")\n",
+    "                   ]\n",
+    "data_filtrada.head(8)"
    ]
   }
  ],
